--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Kristen Brickner | Security Research
 description: >-
   Building in public - AI/Cloud security research, tools, and learning journey
 baseurl: ""
-url: "https://kbrickz.github.io
+url: "https://kbrickz.github.io"
 
 # Author
 author:
